[gd_scene load_steps=6 format=2]

[ext_resource path="res://CoreGameScene.gd" type="Script" id=1]
[ext_resource path="res://GameBoard.tscn" type="PackedScene" id=2]
[ext_resource path="res://Inventory.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/fonts/ZCOOLXiaoWei-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 4 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Board" parent="." instance=ExtResource( 2 )]
position = Vector2( 309.632, 68.7076 )

[node name="PlayerInventory" parent="." instance=ExtResource( 3 )]
position = Vector2( 9.08832, 55.9045 )

[node name="OpponentInventory" parent="." instance=ExtResource( 3 )]
position = Vector2( 740.695, 53.6324 )

[node name="PlayerPoints" type="Label" parent="."]
margin_right = 505.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 1 )
text = "Player: 0"

[node name="OpponentPoints" type="Label" parent="."]
margin_left = 510.0
margin_right = 1015.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 1 )
text = "Opponent: 0"
align = 2
